--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Lin的室內設計作品</h1>
+								<h1>Lin室內設計</h1>
 							</header>
 							<div class="content">
 								<p>A responsive site template designed by HTML5 UP<br />
@@ -65,7 +65,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
+										<h3><a href="landing.html" class="link">公司簡介</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -74,7 +74,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
+										<h3><a href="landing.html" class="link">設計作品</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
@@ -83,7 +83,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
+										<h3><a href="landing.html" class="link">實務案例</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
@@ -92,7 +92,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
+										<h3><a href="landing.html" class="link">服務項目</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
@@ -101,7 +101,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
+										<h3><a href="landing.html" class="link">設計師</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -110,7 +110,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
+										<h3><a href="landing.html" class="link">專業證照</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
