--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/p1.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">公司簡介</a></h3>
+										<h3><a href="landing.html" class="link">現代風</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/p2.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">設計作品</a></h3>
+										<h3><a href="landing.html" class="link">鄉村風</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
@@ -83,7 +83,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">實務案例</a></h3>
+										<h3><a href="landing.html" class="link">無印風</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
@@ -92,7 +92,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">服務項目</a></h3>
+										<h3><a href="landing.html" class="link">北歐風</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
@@ -101,7 +101,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">設計師</a></h3>
+										<h3><a href="landing.html" class="link">侘寂風</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -110,7 +110,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">專業證照</a></h3>
+										<h3><a href="landing.html" class="link">簡約風</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
