--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<img src="images/p1.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">現代風</a></h3>
+										<h3><a href="landing.html" class="link">北投賀宅</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -74,43 +74,43 @@
 										<img src="images/p2.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">鄉村風</a></h3>
+										<h3><a href="landing.html" class="link">表參道黃宅</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/p4.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">無印風</a></h3>
+										<h3><a href="landing.html" class="link">天母力麒天沐</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/p3.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">北歐風</a></h3>
+										<h3><a href="landing.html" class="link">淡水歡天喜地</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/p6.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">侘寂風</a></h3>
+										<h3><a href="landing.html" class="link">東湖宿舍許宅</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/p5.jpeg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">簡約風</a></h3>
+										<h3><a href="landing.html" class="link">龍潭夏都行館彭宅</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
