建立新網址

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/p6.jpg" alt="" />
+										<img src="images/p5.jpeg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">東湖宿舍許宅</a></h3>
